[gd_scene load_steps=21 format=3 uid="uid://dc5idfx3sqslo"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_clppa"]
[ext_resource type="Texture2D" uid="uid://o2w257jh0605" path="res://Textures/Player/pipo-nekonin002.png" id="2_7vals"]
[ext_resource type="PackedScene" uid="uid://bn8isi6klgfbd" path="res://Utility/hurtbox.tscn" id="3_w1wmh"]
[ext_resource type="Texture2D" uid="uid://b54ndqtxuisxi" path="res://Textures/GUI/exp_background.png" id="4_qi1uv"]
[ext_resource type="Texture2D" uid="uid://brow82i4nsuy2" path="res://Textures/GUI/exp_progress.png" id="5_1fy43"]
[ext_resource type="FontFile" uid="uid://dnkhxg4vqpfx1" path="res://Font/tenderness.otf" id="6_i6mvf"]
[ext_resource type="AudioStream" uid="uid://bu4dxegvuk7hb" path="res://Audio/SoundEffect/levelup.ogg" id="7_rhghi"]
[ext_resource type="Texture2D" uid="uid://b2axjkqd5b42u" path="res://Textures/GUI/healthbar.png" id="8_qlknt"]
[ext_resource type="Texture2D" uid="uid://b8ymnlyi0ejav" path="res://Textures/GUI/health.png" id="9_nyqt3"]
[ext_resource type="AudioStream" uid="uid://b8pkc27km4f36" path="res://Audio/SoundEffect/Victory.wav" id="10_sbipk"]
[ext_resource type="AudioStream" uid="uid://dbexryft2qamx" path="res://Audio/SoundEffect/Lose.ogg" id="11_4rrg0"]
[ext_resource type="PackedScene" uid="uid://fumkjyij46qi" path="res://Utility/basic_button.tscn" id="12_echnl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_76s8g"]
radius = 3.0
height = 14.0

[sub_resource type="Animation" id="Animation_oc4w6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ayjt3"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_la52f"]
_data = {
"RESET": SubResource("Animation_oc4w6"),
"Walk": SubResource("Animation_ayjt3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1t8u"]
size = Vector2(12, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_velmd"]
radius = 370.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nldts"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_is5g7"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_clppa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -1)
scale = Vector2(0.915598, 1)
texture = ExtResource("2_7vals")
hframes = 3
vframes = 4

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 3)
shape = SubResource("CapsuleShape2D_76s8g")

[node name="WalkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_la52f")
}

[node name="Hurtbox" parent="." instance=ExtResource("3_w1wmh")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(2, 4)
shape = SubResource("RectangleShape2D_b1t8u")

[node name="DisableTimer" parent="Hurtbox" index="1"]
wait_time = 0.3

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTime" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTime"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="javelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_velmd")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_nldts")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_is5g7")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExpBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("4_qi1uv")
texture_progress = ExtResource("5_1fy43")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExpBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_i6mvf")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 208.0
value = 50.0
texture_over = ExtResource("8_qlknt")
texture_progress = ExtResource("9_nyqt3")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="lbl_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_i6mvf")
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_rhghi")
volume_db = -20.0

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 710.0
offset_top = -382.0
offset_right = 910.0
offset_bottom = -132.0

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_i6mvf")
text = "Resultado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_sbipk")
volume_db = -20.0

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_4rrg0")
volume_db = -22.0

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_echnl")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("6_i6mvf")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 40.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="Attack/IceSpearTime" to="." method="_on_ice_spear_time_timeout"]
[connection signal="timeout" from="Attack/IceSpearTime/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]

[editable path="Hurtbox"]
